# rust-sample

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
clean/: Cargo.toml  Makefile
clean/infra/db/migrations/: 20230212065307_init.sql
clean/src/: main.rs
clean/src/domain/: error.rs
clean/src/domain/model/: user.rs
clean/src/domain/repository/: user.rs
clean/src/infra/: persistence.rs
clean/src/infra/persistence/: pg.rs  user.rs
infra/docker/postgres/: create_database.sql
mvc/: .envrc  .gitignore  Cargo.toml  Makefile
mvc/infra/db/migrations/: 20230212065307_init.sql
mvc/src/: lib.rs  main.rs  model.rs
mvc/src/controller/: user.rs
mvc/src/model/: pg.rs  user.rs
mvc/src/utils/: error.rs
src/: lib.rs  main.rs
src/model/: post.rs  user.rs
src/persistence/: config.rs  user.rs
