[package]
name = "rust_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["postgres", "chrono", "runtime-tokio-rustls"] }
tokio = {version="1.25.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
