[package]
name = "clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = { version = "0.4.23", features = ["serde"] }
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "chrono", "runtime-tokio-rustls", "uuid"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde"] }
